--- a/oreally.cabal
+++ b/oreally.cabal
@@ -33,8 +33,8 @@ library
   build-depends:
       base >=4.7 && <5
     , bytestring
-    , command >=0.1
     , network-uri >=2.7.0
+    , process >=1.6.14
     , text
   default-language: Haskell2010
 
@@ -48,9 +48,9 @@ executable oreally-exe
   build-depends:
       base >=4.7 && <5
     , bytestring
-    , command >=0.1
     , network-uri >=2.7.0
     , oreally
+    , process >=1.6.14
     , text
   default-language: Haskell2010
 
@@ -66,10 +66,10 @@ test-suite oreally-test
   build-depends:
       base >=4.7 && <5
     , bytestring
-    , command >=0.1
     , hspec
     , hspec-discover
     , network-uri >=2.7.0
     , oreally
+    , process >=1.6.14
     , text
   default-language: Haskell2010
